--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     20 rue Bayard, 63000,<br/>
                     Clermont-Ferrand<br/>
                     07 86 65 60 76<br/>
-                    <a href="mailto: benjamin.picard0@gmail.com">benjamin.picard0@gmail.com</a><br/>
-                    Github : <a href="https://github.com/BenjaminPcrd">/BenjaminPcrd</a><br/>
-                    Linkedin : <a href="https://www.linkedin.com/in/benjaminpcrd/">/in/benjaminPcrd</a>
+                    <a href="mailto: benjamin.picard0@gmail.com" target="_blank">benjamin.picard0@gmail.com</a><br/>
+                    Github : <a href="https://github.com/BenjaminPcrd" target="_blank">/BenjaminPcrd</a><br/>
+                    Linkedin : <a href="https://www.linkedin.com/in/benjaminpcrd/" target="_blank">/in/benjaminPcrd</a>
                 </p>
                 <h2>APTITUDES</h2>
                 <ul>
