min and max width

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <style>
             h1 {
-                font-size: x-large;
+                font-size: xx-large;
             }
             h2 {
                 font-size: large;
@@ -23,14 +23,17 @@
             }
             #main {
                 display: flex;
-                width: 50em;
+                max-width: 50em;
+                min-width: 30em;
                 border-color: rgb(73, 78, 95);
                 border-width: 2px;
                 border-style: solid;
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                margin: auto;
             }
             #leftCol {
                 color: white;
+                max-width: 12.5em;
                 background-color: rgb(73, 78, 95);
                 padding: 2em;
             }
@@ -58,6 +61,7 @@
                 <p>
                     Né le 31 Mars 1999
                 </p>
+                <br/>
                 <h2>COORDONNÉES</h2>
                 <p>
                     20 rue Bayard, 63000,<br/>
@@ -67,15 +71,19 @@
                     Github : <a href="https://github.com/BenjaminPcrd" target="_blank">/BenjaminPcrd</a><br/>
                     Linkedin : <a href="https://www.linkedin.com/in/benjaminpcrd/" target="_blank">/in/benjaminPcrd</a>
                 </p>
+                <br/>
                 <h2>APTITUDES</h2>
                 <ul>
                     <li>Anglais niveau C1</li>
                     <li>Brevet d’Aptitudes aux Fonctions d’Animateur</li>
                     <li>Permis B, véhicule personnel</li>
                 </ul>
+                <br/>
                 <h2>CENTRES D’INTÉRÊT</h2>
                 <ul>
-                    <li>Escalade, Slackline, grande randonnée</li>
+                    <li>Escalade : voie et bloc, je pratique majoritairement en salle, mais avec une préférence pour l’extérieur</li>
+                    <li>Slackline</li>
+                    <li>Grande randonnée, bivouac</li>
                     <li>Informatique, technologie</li>
                 </ul>
             </div>
