--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <h2>EXPÉRIENCES PROFESSIONNELLES</h2>
                     <h3>Animateur périscolaire</h3>
                     <p>
-                        École Jean de la Fontaine, Clermont-Ferrand | Février 2021 – en cours<br/>
+                        École Jean de la Fontaine, Clermont-Ferrand | Février 2021 – Juillet 2022<br/>
                         <span>Encadrement d’enfants du CP au CM2. Activités, jeux et aide aux devoirs</span>
                     </p>
                     <h3>Assistant de projet</h3>
