modification et download button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <style>
+            form {
+                display: flex;
+                justify-content: center;
+                margin: 10px;
+            }
             h1 {
                 font-size: xx-large;
             }
@@ -11,6 +16,7 @@
             }
             h3 {
                 font-size: medium;
+                line-height: 0.5;
             }
             p, ul {
                 font-size: small;
@@ -86,6 +92,11 @@
                     <li>Grande randonnée, bivouac</li>
                     <li>Informatique, technologie</li>
                 </ul>
+                <br/>
+                <h2>COMPÉTENCES INFORMATIQUES</h2>
+                <p>
+                    Javascript - Java - HTML - CSS - React Native - React.js - Next.js - MongoDB - Firebase - Git - Linux
+                </p>
             </div>
             <div id="rightCol">
                 <div>
@@ -130,14 +141,28 @@
                 </div>
 
                 <div>
-                    <h2>COMPÉTENCES INFORMATIQUES</h2>
-                    <p><strong>Langages : </strong>Javascript, Java, HTML, CSS, SQL, C</p>
-                    <p><strong>Méthodologies et modélisation : </strong>Modèle entité – association, UML</p>
-                    <p><strong>Outils et logiciels : </strong>Git, Divers IDE, Linux</p>
-                    <p><strong>Technologies : </strong>React Native, React.js, Next.js, Node.js, MongoDB</p>
-                    <p><strong>Réalisations : </strong>Jeu d’arcade (Processing, JavaFX), site web (React.js, Next.js), applications mobiles (React Native, Java Android)</p>
                 </div>
+                    <h2>RÉALISATIONS</h2>
+                    <h3>Fitchat</h3>
+                    <p>
+                        Application mobile (React Native) utilisant diverses API (Google Fit, Firebase, Dialogflow).
+                    </p>
+                    <h3>Attendr App & Dashboard</h3>
+                    <p>
+                        Application mobile (React Native) permettant de gérer la présence en classe et interface web (React).
+                    </p>
+                    <h3>TheMovieDB Search App</h3>
+                    <p>
+                        Application mobile React Native (Expo) utilisant l’API de themoviedb.org.
+                    </p>
+                    <h3>Jeux JavaFX</h3>
+                    <p>
+                        Jeu d’arcade 2D type Frogger, réalisé en JavaFX.
+                    </p>
             </div>
         </div>
+        <form target="_blank" method="get" action="CV informatique - Benjamin Picard.pdf">
+            <button type="submit">Télécharger au format PDF</button>
+         </form>
     </body>
 </html>
