--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <br/>
                 <h2>COMPÉTENCES INFORMATIQUES</h2>
                 <p>
-                    Javascript - Java - HTML - CSS - React Native - React.js - Next.js - MongoDB - Firebase - Git - Linux
+                    Javascript – Java – Android Studio – React Native – React.js – Next.js – Firebase – Git – Linux
                 </p>
             </div>
             <div id="rightCol">
