--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                 <div class="item">
                     <span class="date">2019 – 2020</span>
-                    <h3>Bachelor of Computer science <span class="light">The Robert Gordon University, Aberdeen (UK)</span></h3>
+                    <h3>Bachelor of Computer science <span class="light">Robert Gordon University, Aberdeen (UK)</span></h3>
                 </div>
 
                 <div class="item">
