--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <h3>Assistant de projet <span class="light">Robert Gordon University, Aberdeen (UK)</span></h3>
                     <p>
                         Développement d'une application mobile au sein d’une équipe 
-                        <br><strong>Technologies : </strong>React Native, MongoDB et React.js
+                        <br><strong>Technologies : </strong>React-native, MongoDB et React.js
                     </p>
                 </div>
 
@@ -48,7 +48,7 @@
                     <h3>Stage en entreprise <span class="light">Robert Gordon University, Aberdeen (UK)</span></h3>
                     <p>
                         Gestion de projet et développement d’applications mobile 
-                        <br><strong>Technologies : </strong>React Native
+                        <br><strong>Technologies : </strong>React-native, Expo
                     </p>
                 </div>
 
