putting FitChat in realisations

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h2><i class="title-icon">&#xf0ca; </i>RÉALISATIONS</h2>
 
                 <div class="item">
-                    <h3><a href="https://github.com/BenjaminPcrd/HipsAndKnees" target="_blank">HipsAndKnees</a></h3>
+                    <h3><a href="https://github.com/RGU-Computing/fitchat" target="_blank">FitChat</a></h3>
                     <p>
                         Application mobile permettant d’aider les personnes ayant des douleurs chronique, a les soulager, 
                         en leur proposant des exercices en fonction de leur activité. 
