--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang=fr>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport">
     <link rel="stylesheet" href="./style.css">
     <title>CV - Benjamin Picard</title>
 </head>
