--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=fr>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport">
+    <meta name="viewport" content="witdh=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>CV - Benjamin Picard</title>
 </head>
