update, new post

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="header">
             <div id="leftheader">
                 <h1>Benjamin Picard</h1>
-                <h3>Développeur mobile - 23 ans</h3>
+                <h3>Développeur Frontend - 23 ans</h3>
                 
             </div>
             <div id="rightheader">
@@ -31,7 +31,16 @@
                 <h2><i class="title-icon">&#xe801; </i>EXPÉRIENCES PROFESSIONNELLES</h2>
 
                 <div class="item">
-                    <span class="date">Février 2021 – Juillet 2022</span>
+                    <span class="date">Novembre 2022 - en cours</span>
+                    <h3>Développeur Frontend - Shaple <span class="light">Lyon (remote)</span></h3>
+                    <p>
+                        - Développement de l'outil "Backupta" (gestion de sauvegarde de configurations Okta)<br>
+                        - Développement sur Salesforce
+                    </p>
+                </div>
+
+                <div class="item">
+                    <span class="date">Février 2021 - Juillet 2022</span>
                     <h3>Animateur périscolaire <span class="light">Clermont-Ferrand</span></h3>
                     <p>
                         Encadrement d’enfants du CP au CM2. Activités, jeux et aide aux devoirs
@@ -48,7 +57,7 @@
                 </div>
 
                 <div class="item">
-                    <span class="date">Avril – Juin 2019</span>
+                    <span class="date">Avril - Juin 2019</span>
                     <h3>Stage en entreprise <span class="light">Robert Gordon University, Aberdeen (UK)</span></h3>
                     <p>
                         Gestion de projet et développement d’applications mobile 
@@ -67,17 +76,17 @@
                 <h2><i class="title-icon">&#xf19d; </i>FORMATION</h2>
 
                 <div class="item">
-                    <span class="date">2019 – 2020</span>
+                    <span class="date">2019 - 2020</span>
                     <h3>Bachelor of Computer science <span class="light">Robert Gordon University, Aberdeen (UK)</span></h3>
                 </div>
 
                 <div class="item">
-                    <span class="date">2017 – 2019</span>
+                    <span class="date">2017 - 2019</span>
                     <h3>DUT Informatique <span class="light">Clermont-Ferrand</span></h3>
                 </div>
                 
                 <div class="item">
-                    <span class="date">2016 – 2017</span>
+                    <span class="date">2016 - 2017</span>
                     <h3>Baccalauréat Scientifique <span class="light">Lycée Pierre-Caraminot, Égletons (19)</span></h3>
                     <p>
                         Option Sciences de l’Ingénieur, spécialité Informatique et Sciences du Numérique. Mention assez bien
@@ -133,6 +142,7 @@
                     <li>Visual Studio Code</li>
                     <li>Android Studio</li>
                     <li>Firebase</li>
+                    <li>MongoDB</li>
                     <li>Git</li>
                     <li>Linux</li>
                 </ul>
