--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="header">
             <div id="leftheader">
                 <h1>Benjamin Picard</h1>
-                <h3>Développeur Frontend - 23 ans</h3>
+                <h3>Développeur Frontend - 24 ans</h3>
                 
             </div>
             <div id="rightheader">
@@ -35,7 +35,6 @@
                     <h3>Développeur Frontend - Shaple <span class="light">Lyon (remote)</span></h3>
                     <p>
                         - Développement de l'outil "Backupta" (gestion de sauvegarde de configurations Okta)<br>
-                        - Développement sur Salesforce
                     </p>
                 </div>
 
@@ -82,7 +81,7 @@
 
                 <div class="item">
                     <span class="date">2017 - 2019</span>
-                    <h3>DUT Informatique <span class="light">Clermont-Ferrand</span></h3>
+                    <h3>DUT Informatique <span class="light">IUT de Clermont-Ferrand (63)</span></h3>
                 </div>
                 
                 <div class="item">
@@ -94,6 +93,14 @@
                 </div>
 
                 <h2><i class="title-icon">&#xf0ca; </i>RÉALISATIONS</h2>
+
+                <div class="item">
+                    <h3><a href="https://github.com/BenjaminPcrd/Climbed" target="_blank">Climbed</a></h3>
+                    <p>
+                        Application mobile pour noter les voies d'escalade réalisées et avoir des statistiques.
+                        <br><strong>Technologies : </strong>React-native
+                    </p>
+                </div>
 
                 <div class="item">
                     <h3><a href="https://github.com/RGU-Computing/fitchat" target="_blank">FitChat</a></h3>
@@ -132,25 +139,23 @@
                 <h2><i class="leftcol-icon">&#xf121; </i>COMPÉTENCES INFORMATIQUE</h2>
                 <h3>Langages & framework :</h3>
                 <ul>
-                    <li>Javascript</li>
-                    <li>Typescript</li>
-                    <li>React-native</li>
-                    <li>React.js</li>
+                    <li>Javascript & Typescript</li>
+                    <li>React & React-native</li>
+                    <li>HTML, CSS, Bootstrap</li>
                 </ul>
                 <h3>Outils & logiciels</h3>
                 <ul>
-                    <li>Visual Studio Code</li>
-                    <li>Android Studio</li>
                     <li>Firebase</li>
-                    <li>MongoDB</li>
                     <li>Git</li>
+                    <li>Jira</li>
                     <li>Linux</li>
+                    <li>Visual Studio Code</li>
                 </ul>
 
                 <h2><i class="leftcol-icon">&#xf164; </i>CENTRES D’INTÉRÊT</h2>
                 <ul>
                     <li>Escalade (Voie, grande voie et bloc)</li>
-                    <li>Slackline</li>
+                    <li>Slackline & Highline</li>
                     <li>Grande randonnée, bivouac</li>
                     <li>Bricolage, DIY</li>
                 </ul>
