--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <span class="date">Novembre 2022 - en cours</span>
                     <h3>Développeur Frontend - Shaple <span class="light">Lyon (remote)</span></h3>
                     <p>
-                        - Développement de l'outil "Backupta" (gestion de sauvegarde de configurations Okta)<br>
+                        Développement de l'outil "Backupta" (gestion de sauvegarde de configurations Okta)
                     </p>
                 </div>
 
@@ -105,7 +105,7 @@
                 <div class="item">
                     <h3><a href="https://github.com/RGU-Computing/fitchat" target="_blank">FitChat</a></h3>
                     <p>
-                        Application mobile permettant d’aider les personnes ayant des douleurs chronique, a les soulager, 
+                        Application mobile permettant d’aider les personnes ayant des douleurs chronique, à les soulager, 
                         en leur proposant des exercices en fonction de leur activité. 
                         <br><strong>Technologies : </strong>React-native, Google Fit API, Dialogflow API, Firebase
                     </p>
@@ -154,9 +154,9 @@
 
                 <h2><i class="leftcol-icon">&#xf164; </i>CENTRES D’INTÉRÊT</h2>
                 <ul>
-                    <li>Escalade (Voie, grande voie et bloc)</li>
+                    <li>Escalade (En salle, voie et grande voie)</li>
                     <li>Slackline & Highline</li>
-                    <li>Grande randonnée, bivouac</li>
+                    <li>Randonnée & bivouac</li>
                     <li>Bricolage, DIY</li>
                 </ul>
             </div>
